<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_userlist"
    tools:context=".fragment.UsersFragment">


    <RelativeLayout
        android:id="@+id/searchUserField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="8dp"
        android:background="@drawable/background_search_field"
        >

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        android:layout_centerVertical="true"
        android:contentDescription="@string/contentDesc"
       android:layout_alignParentStart="true"/>


        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/searchIcon"
            android:hint="@string/searchuser"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="16sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usersRecyclerView"
        android:layout_below="@id/searchUserField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"
        />

</RelativeLayout>