<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="dismissKeyboard"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:onClick="dismissKeyboard"
            android:contentDescription="@string/contentDesc"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/button"
            android:padding="4dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="26dp"
            android:onClick="showOrHidePassword">

            <ImageView
                android:id="@+id/showPasswordImageView"
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDesc"
                app:srcCompat="@drawable/show" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="280dp"

            android:layout_marginEnd="26dp"
            android:onClick="showOrHidePassword">

            <ImageView
                android:id="@+id/hidePasswordImageView"
                android:layout_width="26dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:alpha="0"
                android:contentDescription="@string/contentDesc"
                app:srcCompat="@drawable/hide" />

        </FrameLayout>

        <TextView
            android:id="@+id/resetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resetButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:text="@string/forgot"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resetPasswordTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/noAccount"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:text="@string/signup"
            android:textColor="#C9000000"
            android:textSize="18sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>