<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="dismissKeyboard"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:onClick="dismissKeyboard"
            android:contentDescription="@string/contentDesc"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:layout_marginTop="24dp"
            android:justificationMode="inter_word"
            android:padding="4dp"
            android:textSize="16sp"
            android:text="@string/reset_password" />


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoTextView"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorAccent" />


        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:padding="4dp"
            android:text="@string/reset"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />






    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>